# CoFHE

./: .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark.hpp  local.cpp  network.cpp
examples/: CMakeLists.txt  node.cpp  tutorial.cpp
include/: CMakeLists.txt  cofhe.hpp
include/common/: algorithms.hpp  atomics.hpp  error.hpp  expected.hpp  iterators.hpp  macros.hpp  memory.hpp  optional.hpp  pimpl.hpp  pimpl_impl.hpp  pointers.hpp  synchronization.hpp  system_error.hpp  tensor.hpp  type_traits.hpp  utils.hpp  variant.hpp  vector.hpp
include/cuda/: cuda_cryptosystem.hpp
include/node/: beavers_triplet_request_handler.hpp  client.hpp  client_node.hpp  cofhe_node_request_handler.hpp  compute_request_handler.hpp  join_as_node.hpp  network_details.hpp  network_details_request_handler.hpp  nodes.hpp  partial_decryption_request_handler.hpp  request_response.hpp  root_request_handler.hpp  server.hpp  setup_node_request_handler.hpp
include/smpc/: beavers_triplet_generation.hpp  ciphertext_multiplications.hpp  smpc_client.hpp
include/x86_64/: cpu_cryptosystem.hpp  cpu_cryptosystem.inl  cpu_cryptosystem_distributed.inl  cpu_cryptosystem_tensor_ops.inl  cpu_cryptosystem_vector_ops.inl  openmp.hpp  qfi.inl
scripts/: start_network.sh
